--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@google/genai": "^1.33.0",
     "next": "^16.0.10",
+    "next-pwa": "^5.6.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3"
   },
