--- a/app/manifest.json
+++ b/app/manifest.json
@@ -6,6 +6,8 @@
   "background_color": "#ffffff",
   "theme_color": "#111827",
   "icons": [
-    { "src": "/icons/icon-512.png", "sizes": "512x512", "type": "image/png" }
+    { "src": "/icons/icon-256.png", "sizes": "256x256", "type": "image/png" },
+    { "src": "/icons/icon-512.png", "sizes": "512x512", "type": "image/png" },
+    { "src": "/icons/icon-768.png", "sizes": "768x768", "type": "image/png" }
   ]
 }
